2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py (conv): dashes rule.

	* Documentation/user/lilypond-book.itely: syntax fixes. 

2003-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): release 1.9.0

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	note about dvips. (Should backport.)

	* scripts/convert-ly.py
	(FatalConversionError.articulation_substitute): add
	convert-new-chords code. Remove convert-new-chords.py

	* Documentation/user/refman.itely (Octave check): document
	\octave.

	* Documentation/topdocs/NEWS.texi: add \octave, postfix and
	\relative changes.

	* lily/parser.yy (command_element): octave check:

	   \octave PITCH

	checks that PITCH (without octave) yields PITCH (with octave) in
	\relative

	* lily/relative-octave-music.cc (to_relative_octave): octave check.

	* lily/scm-option.cc: ly:set-option now has the default argument
	#t.

	* lily/lexer.ll: add \renameinput

	* python/lilylib.py (command_name): robustifications.

	* scripts/ly2dvi.py (run_latex): use >& for redirection iso. of
	/dev/stderr. This is ash compatible.

	* ly/init.ly: add warning if compatibility was not necessary.

	* lily/scm-option.cc (LY_DEFINE): add ly:get-option

	* flower/include/string-handle.icc: formatting cleanups, rename
	references by ref_count_.

2003-08-25  Heikki Junes  <hjunes@cc.hut.fi>

	* make/lilypond.mandrake.spec.in: syncronize the spec file with
	Torbjorn Turpeinen (tobbe@nyvalls.se): fix group, update reqs,
	package libs separately, fix conflicting php variable out=/dev/vc/
	invoking `unset out', declare menus, use only one icon-file, fix
	doc-path in menu.

2003-08-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): typo

	* Documentation/misc/GNUmakefile: restore misc directory.

	* input/mutopia/J.S.Bach/bwv940.ly: add 1 petite prelude

	* input/mutopia/J.S.Bach/GNUmakefile (EXTRA_DIST_FILES): remove
	Petites-Preludes 
