@@ -12,7 +12,7 @@ c4
 
 c4-"normal"
   % why doesn't this  work?
-  c4\markup \bold \magnify #2.0 "foobar"
+  c4-\markup \bold \magnify #2.0 "foobar"
 
   \property Voice .NoteHead \set #'font-magnification = #1.2
   \property Voice.TextScript \set #'font-magnification = #2.0
