@@ -9,7 +9,7 @@ arbitrary grobs. " }
  \score { \notes \relative c''  {
 
  \property Voice.TextScript \override #'molecule-callback =
-   #(make-molecule-boxer 0.1 0.3 0.2 brew-new@\markup-molecule)
+   #(make-molecule-boxer 0.1 0.3 0.2 brew-new-markup-molecule)
 
    c'4^"foo"
 
@@ -17,7 +17,7 @@ arbitrary grobs. " }
    #(make-molecule-boxer 0.05 0.25 0.25 Stem::brew_molecule)
 
 \property Score.RehearsalMark \override #'molecule-callback =
-   #(make-molecule-boxer 0.15 0.3 0.3 brew-new@\markup-molecule)
+   #(make-molecule-boxer 0.15 0.3 0.3 brew-new-markup-molecule)
       c8
 \property Voice.Stem \revert #'molecule-callback
 
