@@ -1405,18 +1405,19 @@ if 1:
 	conversions.append (((1,9,0), conv, """New relative mode,
 Postfix articulations, new chord syntax."""))
 
-def conv (str):
-	str = re.sub ('-\\markup', '@\\markup', str)
-	str = re.sub (r'-\\', r'\\', str)
-	str = re.sub (r'-\)', ')', str)
-	str = re.sub (r'-\(', '(', str)
-	str = re.sub ('-\[', '[', str)
-	str = re.sub ('-\]', ']', str)
-	str = re.sub ('-~', '~', str)
-	str = re.sub ('@\\markup', r'-\\markup', str)
-	return str
-	
-conversions.append (((1,9,1), conv, """Remove - before articulation"""))
+if 1:
+	def conv (str):
+		str = re.sub (r'-\\markup', r'@\\markup', str)
+		str = re.sub (r'-\\', r'\\', str)
+		str = re.sub (r'-\)', ')', str)
+		str = re.sub (r'-\(', '(', str)
+		str = re.sub ('-\[', '[', str)
+		str = re.sub ('-\]', ']', str)
+		str = re.sub ('-~', '~', str)
+		str = re.sub (r'@\\markup', r'-\\markup', str)
+		return str
+
+	conversions.append (((1,9,1), conv, """Remove - before articulation"""))
 
 ################################
 #	END OF CONVERSIONS	
